2005-06-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/ps-to-png.scm (make-ps-images): Bugfix: `Pages: 1\n' is not
	multi-page.  Fix .eps regular expression.

2005-06-07  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/putting.itely: add info on modifying templates.

	* Documentation/user/lilypond.itely, converters.itely, invoking.itely:
	misc small changes.

2005-06-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/ps-to-png.scm (make-ps-images): no paper size for multi-page.

	* scripts/lilypond-ps2png.scm

	* VERSION (PACKAGE_NAME): release 2.5.28

2005-06-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (prepend_env_path): Do not append /, that does not
	work.  Localedir lives in datadir, not in prefix.

	* scm/framework-ps.scm (write-preamble): Remove load-font-via-GS
	hack for windows.

	* flower/include/file-cookie.hh: Compile fix.

2005-06-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly: add \defaultchild to InnerStaffGroup. 

	* scm/ps-to-png.scm (gulp-port): rename from read. Don't redefine
	system primitives.
	(gulp-port): using read-string!/partial. We don't want to read an
	entire PS file  (GUILE 1.6 limits strings to 16M) 

	* scm/define-grobs.scm (all-grob-descriptions): remove arch-*
	properties. Add font-interface. 

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove old bracket properties.

	* scm/x11-color.scm: reformat. 

	* lily/ledger-line-engraver.cc (acknowledge_grob): create new
	LedgerLineSpanner if new StaffSymbol is found. 

	* lily/staff-symbol-engraver.cc (acknowledge_grob): also set
	staff-symbol for finishing staff. 

	* lily/GNUmakefile (OUT_DIST_FILES): don't dist Flex output

	* scm/output-svg.scm (setcolor): implement (re)setcolor with <g>
	change black to currentColor everywhere. This fixes color support
	in SVG.

2005-06-06  Carl Sorensen  <carldsorensen@comcast.net>

	* input/regression/fret-diagrams.ly: new file to test fret diagram
	capability
