@@ -1,6 +1,6 @@
 PACKAGE_NAME=LilyPond
 MAJOR_VERSION=2
 MINOR_VERSION=5
-PATCH_LEVEL=28
+PATCH_LEVEL=29
 MY_PATCH_LEVEL=
 
